@@ -1,3 +1,9 @@
+2012-01-23  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/51895
+	* tree-sra.c (decide_one_param_reduction): Avoid sub-optimal
+	parameter decomposition into BLKmode components.
+
 2012-01-23  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* tree-ssa-structalias.c (intra_create_variable_infos): Do not create
